test/files/neg/noMember1.scala
import scala.collection.IterableOps._

class A
