test/files/neg/noMember1.check
noMember1.scala:1: error: object IterableOps is not a member of package collection
Note: trait IterableOps exists, but it has no companion object.
import scala.collection.IterableOps._
                        ^
one error found
